fixing list spacing and icons

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2465,7 +2465,8 @@ input, select, textarea {
 
 	ol {
 		list-style: decimal;
-		margin: 0 0 2em 0;
+		margin: 0 0 0.5em 0;
+		/* margin: 0 0 2em 0; */
 		padding-left: 1.25em;
 	}
 
